rgbds-0.6.1/test/asm/label-outside-section.err
error: label-outside-section.asm(1):
    Label "bad" created outside of a SECTION
error: Assembly aborted (1 error)!
