rgbds-0.6.1/test/asm/label-outside-section.asm
bad:
SECTION "Test", ROM0
good:
    PRINTLN "OK!"
